--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,8 @@
 REACT_APP_TMDB_KEY=YOUR_API_KEY
+REACT_APP_FIREBASE_API_KEY=YOUR_API_KEY
+REACT_APP_FIREBASE_AUTH_DOMAIN=YOUR
+REACT_APP_FIREBASE_PROJECT_ID=YOUR
+REACT_APP_FIREBASE_STORAGE_BUCKET=YOUR
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=YOUR
+REACT_APP_FIREBASE_APP_ID=YOUR
+REACT_APP_FIREBASE_MEASUREMENT_ID=YOUR
